GUI is working, need to fix setting reflection.

--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,8 @@ jar.manifest.attributes(
 shadowJar {
     dependencies {
         include(dependency('org.spongepowered:mixin'))
+        include(dependency('com.lukflug:panelstudio'))
+        include(dependency('com.lukflug:panelstudio-mc12'))
     }
 
     exclude 'dummyThing'
